src/test/deca/context/valid/oracle/same_name_class_method.deca
class A{
    int A(int A){
        return 1;
    }
}

{
    A a = new A();
    println(a.A(1));
}