src/test/deca/context/invalid/oracle/instanceof_op_wrong_left4_bis.deca
class A{}

{
    A a = new A();
    int[] tab = new int[2];
    tab instanceof A;
}